fix(Modal): tertiary button alignment issue

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -142,7 +142,6 @@ h1 {
 .footer {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   gap: 16px;
   margin-top: 32px;
 
